🛠️  | initial user panel
Signed-off-by: amino19 <anshumaankrprasad76@gmail.com>

--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "start": "node .",
     "dev": "nodemon -r dotenv/config ."
   },
-  "keywords": [],
+  "keywords": [
+    "heroku"
+  ],
   "author": "",
   "license": "ISC"
 }
